fix: resolve version problem in the test vitest

--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CharlesPereira1/node-clean-ddd.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Charles Pereira",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/CharlesPereira1/node-clean-ddd/issues"
   },
   "homepage": "https://github.com/CharlesPereira1/node-clean-ddd#readme",
   "devDependencies": {
-    "@types/node": "^20.11.9",
-    "typescript": "^5.3.3",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.2"
+    "@types/node": "18.15.11",
+    "typescript": "^5.0.4",
+    "vitest": "0.30.1"
   }
 }
