--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "18.15.11",
     "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "0.30.1"
   },
   "dependencies": {
