--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,13 @@
   },
   "homepage": "https://github.com/CharlesPereira1/node-clean-ddd#readme",
   "devDependencies": {
+    "@faker-js/faker": "7.6.0",
+    "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "18.15.11",
-    "typescript": "^5.0.4",
-    "vite-tsconfig-paths": "^4.3.1",
+    "eslint": "8.39.0",
+    "eslint-plugin-vitest-globals": "1.3.1",
+    "typescript": "5.0.4",
+    "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.30.1"
   },
   "dependencies": {
