--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "rules": {
     "no-useless-constructor": "off",
     "accessor-pairs": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "prettier/prettier": "off"
   }
 }
