--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/CharlesPereira1/node-clean-ddd#readme",
   "devDependencies": {
-    "@faker-js/faker": "7.6.0",
+    "@faker-js/faker": "^7.6.0",
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "18.15.11",
     "eslint": "8.39.0",
